@@ -595,21 +595,21 @@ chinstdir     = /dir="#INSTALL_DIR#"
 uninstall     = Inno Setup #MAJOR_VERSION#_is1
 uninstparam   = /sp- /silent /norestart
 
-;[MySQL]
+[MySQL]
 
-;category      = Development
-;describe      = Relational Database
-;website       = http://dev.mysql.com/
-;scrape        = http://dev.mysql.com/downloads/mysql/
-;version       = mysql-([0-9]\.[0-9]\.[0-9]+)-win32.zip
-;download      = http://mirrors.24-7-solutions.net/pub/mysql/Downloads/MySQL-#MAJORMINOR_VERSION#/
-;filename      = mysql-#VERSION#-win32.zip
-;installer     = Setup.exe
-;instparam     = 
-;upgrades      = false
-;chinstdir     = 
-;uninstall     = 
-;uninstparam   = 
+category      = Development
+describe      = Relational Database
+website       = http://dev.mysql.com/
+scrape        = http://dev.mysql.com/downloads/mysql/
+version       = mysql-([0-9]\.[0-9]\.[0-9]+)-win32.zip
+download      = http://mirrors.24-7-solutions.net/pub/mysql/Downloads/MySQL-#MAJORMINOR_VERSION#/
+filename      = mysql-#VERSION#-win32.zip
+installer     = Setup.exe
+instparam     = 
+upgrades      = false
+chinstdir     = 
+uninstall     = 
+uninstparam   = 
 
 [NSIS]
 
